Check in Flute jar and support templates.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -470,6 +470,18 @@ Choices.textDataContentType.rtf=RTF
 Choices.paramValueType.static=Static
 Choices.paramValueType.dynamic=Dynamic
 
+#52. templateElementType
+Choices.templateElementType.table=Table
+Choices.templateElementType.freeForm=FreeForm
+Choices.templateElementType.data=Data
+Choices.templateElementType.grid=Grid
+Choices.templateElementType.image=Image
+Choices.templateElementType.label=Label
+Choices.templateElementType.list=list
+Choices.templateElementType.text=Text
+Choices.templateElementType.extendedItem=ExtendedItem
+Choices.templateElementType.textData=TextData
+Choices.templateElementType.dataSet=DataSet
 
 ###########################################################
 # Classes
@@ -1821,6 +1833,10 @@ Element.Listing=Listing
 Element.OdaDataSet=ODA Data Set
 Element.OdaDataSource=ODA Data Source
 Element.Theme=Theme
+Element.TemplateParameterDefinition=Template Parameter Definition
+Element.TemplateElement=Template Element
+Element.TemplateReportItem=Template Report Item
+Element.TemplateDataSet=Template Data Set
 
 ###########################################################
 # Element property names
@@ -1901,6 +1917,7 @@ Element.ReportDesign.slot.pageSetup=Page Setup
 Element.ReportDesign.slot.components=Components
 Element.ReportDesign.slot.body=Body
 Element.ReportDesign.slot.scratchPad=Scratch Pad
+Element.ReportDesign.slot.templateParameterDefinitions=Template Parameter Definitions
 
 #2. Report Element ( Prefix = Element.ReportElement )
 Element.ReportElement.displayName=Display name
@@ -1938,6 +1955,7 @@ Element.DataSet.computedColumns=Computed columns
 Element.DataSet.columnHints=Column hints
 Element.DataSet.filter=Filter
 Element.DataSet.cachedMetaData=Cached metadata
+Element.DataSet.refTemplateParameter=Referred Template Parameter Definition
   
 #5. JdbcSelectDataSet  ( prefix  Element.JdbcSelectDataSet )
 Element.JdbcSelectDataSet.statement=Statement
@@ -2099,6 +2117,7 @@ Element.ReportItem.onRender.instance=Instance
 Element.ReportItem.onRender.reportContext=Report context
 Element.ReportItem.onRender.object=Object
 Element.ReportItem.paramBindings=Parameter bindings  
+Element.ReportItem.refTemplateParameter=Referred Template Parameter Definition
   
 #11.Label  ( prefix  Element.Label )
 Element.Label.text=Text
@@ -2340,8 +2359,19 @@ Element.DesignElement.customXml=Custom XML
 Element.DesignElement.propertyMasks=Property masks
 Element.DesignElement.userProperties=User Properties
 
-#37 Theme ( Prefix Element.Theme )
+#38 Theme ( Prefix Element.Theme )
 Element.Theme.slot.styles=Styles
+
+#39 TemplateParameterDefinition ( Prefix Element.TemplateParameterDefinition )
+Element.TemplateParameterDefinition.name=Name
+Element.TemplateParameterDefinition.allowedType=Allowed Type
+Element.TemplateParameterDefinition.description=Description
+Element.TemplateParameterDefinition.descriptionID=Description ID
+Element.TemplateParameterDefinition.slot.default=Default
+
+#40 TemplateElement ( Prefix Element.TemplateElement )
+Element.TemplateElement.name=Name
+Element.TemplateElement.refTemplateParameter=Ref Template Parameter
 
 ###########################################################
 # Predefined style
@@ -2517,6 +2547,8 @@ Message.ChangeItem=Change Item
 Message.AddItem=Add Item
 Message.InsertItem=Insert Item
 Message.RemoveItem=Remove Item
+Message.ReplaceElement=Replace Element
+Message.TransformTemplate=Transform Template
 
 ###########################################################
 #Element new names.
@@ -2555,6 +2587,9 @@ New.ScriptDataSource=ScriptDataSource
 New.ScriptDataSet=ScriptDataSet
 New.OdaDataSource=OdaDataSource
 New.OdaDataSet=OdaDataSet
+New.TemplateParameterDefinition=TemplateParameterDefinition
+New.TemplateDataSet=TemplateDataSet
+New.TemplateReportItem=TemplateReportItem
 
 ###########################################################
 #Default theme name.
@@ -2565,18 +2600,19 @@ Theme.defaultThemeName=defaultTheme
 
 #ContentException
 Error.ContentException.SLOT_NOT_FOUND=The {0} has no slot (id:{1}) defined.
-Error.ContentException.WRONG_TYPE=The {0} is not allowed in the slot ({1}).
-Error.ContentException.DROP_FORBIDDEN=The {0} cannot be deleted, because it is not in the slot ({1}).
+Error.ContentException.WRONG_TYPE=The {1} is not allowed in the slot ({2}) of {0}.
+Error.ContentException.DROP_FORBIDDEN=The {1} cannot be deleted, because it is not in the slot ({2}) of {0}.
 Error.ContentException.CONTENT_NOT_FOUND=The {0} does not appear within the slot ({1}) of the {2}.
 Error.ContentException.NOT_CONTAINER=The {0} is not a container.
 Error.ContentException.SLOT_IS_FULL=The slot({0}) of the {1} is full.
 Error.ContentException.RECURSIVE=The {0} has contained the {1} at some level, so the former can not be moved into the later.
 Error.ContentException.HAS_NO_CONTAINER=The {0} has no container, which means it is not added into the report.
 Error.ContentException.MOVE_FORBIDDEN=The {0} cannot be moved, since it or its contents are referred.
-Error.ContentException.HAS_DESCENDENTS=The {0} cannot be moved or removed, since its contents has descendents.
+Error.ContentException.HAS_DESCENDENTS=The {0} cannot be moved or removed, since it has descendents.
 Error.ContentException.INVALID_CONTEXT_CONTAINMENT=The {0} is not allowed directly or indirectly inside the {1}''s slot({2}).
-Error.ContentException.STRUCTURE_CHANGE_FORBIDDEN=Element "{0}" is child element or a virtual element( inside the child ), can not change its structure.
+Error.ContentException.STRUCTURE_CHANGE_FORBIDDEN=Element "{0}" is child element or a virtual element( inside the child ), or it is a template parameter definition, can not change its structure.
 Error.ContentException.CONTENT_NAME_REQUIRED=The {0} is not allowed to be added into the {1}''s slot {2} because it does not have a name.
+Error.ContentException.INVALID_TEMPLATE_ELEMENT=The {0} has no explicit template parameter definition, so it can not be inserted to the slot ({2}) of {1}.
 
 #CustomMsgException
 Error.CustomMsgException.RESOURCE_KEY_REQUIRED=The resource key of translation must be provided.
@@ -2666,6 +2702,8 @@ Error.SemanticError.COLUMN_PASTE_FORBIDDEN=The paste operation on the element "{
 Error.SemanticError.COLUMN_PASTE_DIFFERENT_LAYOUT=The paste area has the different layout with the copied area.
 Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" that refers an undefined structure "{2}".
 Error.SemanticError.INVALID_SCALAR_PARAMETER_TYPE=Type scalar parameter "{0}" is not valid. Parameters within a cascading parameter group should be dynamic type.  
+Error.SemanticError.MISSING_TEMPLATE_PARAMETER_TYPE=The element {0} must define an "allowedType" explicitly. 
+Error.SemanticError.INCONSISTENT_TEMPLATE_PARAMETER_TYPE=The default element {1} in element {0} is not a kind of {2}.
 
 
 #StyleException
@@ -2700,6 +2738,8 @@ Error.DesignParserException.INVALID_VERSION=The report version "{0}" is invalid.
 Error.DesignParserException.INVALID_ELEMENT_ID=The ID {1} in the {0} is invalid.
 Error.DesignParserException.VIRTUAL_PARENT_NOT_FOUND=BaseID "{0}" can not reference a virtual parent or the referenced parent not in the parent.  
 Error.DesignParserException.DUPLICATE_ELEMENT_ID=ID of the {0} is duplicate with that of {1}.  
+Error.DesignParserException.INCONSISTENT_TEMPLATE_ELEMENT_TYPE=The template element {0} is inconsistent with the default element of the referred template parameter definition {1}.
+Error.DesignParserException.MISSING_TEMPLATE_PARAMETER_DEFAULT=The element {0} must define a default element explicitly.
 
 #DesignFileException
 Error.DesignFileException.SYNTAX_ERROR=Syntax error found, and see error details.
@@ -2747,3 +2787,10 @@ Error.StyleSheetParserException.PROPERTY_NOT_SUPPORTED=The value "{1}" for CSS2 
 Error.StyleSheetParserException.INVALID_SHORT_HAND_CSSPROPERTY_VALUE=The value "{1}" of short-hand property "{0}" is invalid for CSS2 grammar.
 Error.StyleSheetParserException.INVALID_SIMPLE_CSSPROPERTY_VALUE=The value "{1}" for property "{0}" is invalid.		
 	
+#TemplateException
+Error.TemplateException.INVALID_TEMPLATE_ELEMENT_TYPE=The {0} is not a report item or data set element, so it can not be transformed to a template element.
+Error.TemplateException.TRANSFORM_TO_REPORT_ITEM_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be transformed to a report item.
+Error.TemplateException.TRANSFORM_TO_DATA_SET_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be transformed to a data set.
+Error.TemplateException.REVERT_TO_TEMPLATE_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be reverted to a template element.
+Error.TemplateException.CREATE_TEMPLATE_ELEMENT_FORBIDDEN=The {0} is not in the report, so it can not do any transformation.
+Error.TemplateException.TEMPLATE_ELEMENT_NOT_SUPPORTED=The template elements are not supported in libraries.
