--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -109,6 +109,7 @@ date.engine.DuplicateAggregationName=Duplicate aggregation name: {0}.
 data.engine.incorrectGroupKeyValues=The given group key values array is incorrect
 data.engine.NoExpressionProcessorAvailable=No ExpressionProcessor available.
 data.engine.InconvertibleDatatype=The original dataType of value {0} is {1} which can not be converted to the assigned dataType {2}.
+data.engine.ConvertToDataTypeError={0} can not be converted to {1}.
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
