Add a new member "formatType" on Action structure.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -229,6 +229,10 @@ Choices.actionLinkType.hyperlink=HyperLink
 Choices.actionLinkType.drill-through=Drill Through
 Choices.actionLinkType.bookmark-link=Bookmark Link
   
+# actionFormatType
+Choices.actionFormatType.html=html
+Choices.actionFormatType.pdf=pdf
+  
 #28.drillThroughLinkType
 Choices.drillThroughType.none=None
 Choices.drillThroughType.bookmark-link=Bookmark Link
@@ -1766,6 +1770,7 @@ Structure.Action.targetBookmark=Bookmark link
 Structure.Action.reportName=Report Name
 Structure.Action.paramBindings=Parameter Bindings
 Structure.Action.search=Search Keys
+Structure.Action.formatType=Format Type
 
 #18. CachedMetaData
 Structure.CachedMetaData.parameters=Parameters
