Fixed bugs in themes.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2554,6 +2554,7 @@ Message.InsertItem=Insert Item
 Message.RemoveItem=Remove Item
 Message.ReplaceElement=Replace Element
 Message.TransformTemplate=Transform Template
+Message.SetTheme=Set Theme
 
 ###########################################################
 #Element new names.
@@ -2595,6 +2596,7 @@ New.OdaDataSet=OdaDataSet
 New.TemplateParameterDefinition=TemplateParameterDefinition
 New.TemplateDataSet=TemplateDataSet
 New.TemplateReportItem=TemplateReportItem
+New.Theme=Theme
 
 ###########################################################
 #Default theme name.
