Avoid dropping a library if the library has descendents in the current module. Also add API to force dropping a library and break all the parent/child relationships.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2617,7 +2617,7 @@ Error.ContentException.HAS_NO_CONTAINER=The {0} has no container, which means it
 Error.ContentException.MOVE_FORBIDDEN=The {0} cannot be moved, since it or its contents are referred.
 Error.ContentException.HAS_DESCENDENTS=The {0} cannot be moved or removed, since it has descendents.
 Error.ContentException.INVALID_CONTEXT_CONTAINMENT=The {0} is not allowed directly or indirectly inside the {1}''s slot({2}).
-Error.ContentException.STRUCTURE_CHANGE_FORBIDDEN=Element "{0}" is child element or a virtual element( inside the child ), or it is a template parameter definition, can not change its structure.
+Error.ContentException.STRUCTURE_CHANGE_FORBIDDEN=Element "{0}" is child element or a virtual element( inside the child ), can not change its structure.
 Error.ContentException.CONTENT_NAME_REQUIRED=The {0} is not allowed to be added into the {1}''s slot {2} because it does not have a name.
 Error.ContentException.INVALID_TEMPLATE_ELEMENT=The {0} has no explicit template parameter definition, so it can not be inserted to the slot ({2}) of {1}.
 
@@ -2639,6 +2639,7 @@ Error.ExtendsException.UNNAMED_PARENT=The parent element has no name.
 Error.ExtendsException.PARENT_NOT_IN_COMPONENT=The parent element "{0}" is not in component slot of report design.
 Error.ExtendsException.EXTENDS_FORBIDDEN=Element "{0}" is inside a child element or it already has parent, it can not extend.
 Error.ExtendsException.PARENT_NOT_INCLUDE=The library for the parent element "{0}" is not included.
+Error.ExtendsException.NO_PARENT=The element "{0}" has no parent, it can not be localized.    
     
 #NameException
 Error.NameException.NAME_REQUIRED=The name of {0} is required.
@@ -2782,6 +2783,7 @@ Error.MetaDataReaderException.META_DATA_ERROR=The meta-data is invalid.
 Error.LibraryException.LIBRARY_NOT_FOUND=The library with the namespace "{0}" is not found.
 Error.LibraryException.DUPLICATE_LIBRARY_NAMESPACE=The library namespace "{0}" exists already.
 Error.LibraryException.LIBRARY_INCLUDED_RECURSIVELY=The library withe the namespace "{0}" is included recursively.
+Error.LibraryException.LIBRARY_HAS_DESCENDENTS=The library "{0}" can no be dropped because it has descendents "{1}" in the current module.
 
 #StyleSheetException
 Error.StyleSheetException.STYLE_SHEET_NOT_FOUND=The style sheet resource is not found.
