add pageBreakInterval property for table/list items, and sortType property for listingGroup

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -487,6 +487,11 @@ Choices.templateElementType.extendedItem=ExtendedItem
 Choices.templateElementType.textData=TextData
 Choices.templateElementType.dataSet=DataSet
 
+#61. sortType
+Choices.sortType.none=none
+Choices.sortType.sortOnGroupkey=Sort on group key
+Choices.sortType.complexSort=Complex sort
+
 ###########################################################
 # Classes
 
@@ -2183,6 +2188,7 @@ Element.ListingGroup.onRow=On row
 Element.ListingGroup.onRow.toolTip=Called for each row retrieved from the data set for this element, but before creating any content for that row
 Element.ListingGroup.onFinish=On finish
 Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the data set for this element, but before the footer band is created
+Element.ListingGroup.sortType=Sort type
   
 #16.List  ( prefix  Element.List )
 Element.List.slot.header=Header
