Enhanced DtE support of Context Pass-through Objects (BPS35 spec v1.3-1.4) to reflect the use of Map for app context object in the Report Engine and Data Engine API

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -73,6 +73,7 @@ data.engine.BadAggrFuncParam=Illegal parameter for aggregate function {0}
 data.engine.ResetRateGuess=User should reset a new rate guess
 data.engine.UnsupportedCondOp=Conditional operator '{0}' is not supported
 data.engine.EmptyExpression=The expression cannot be null or empty
+data.engine.GroupFilteringIsNotAllowedInGiverQuery=Group filtering cannot coexist with computed columns/filters/sorts/groups that are using Aggregations.
 
 #computed column value
 data.engine.BadCompColExpr=The expression for computed column {0} is not valid.
@@ -110,7 +111,9 @@ data.engine.incorrectGroupKeyValues=The given group key values array is incorrec
 data.engine.NoExpressionProcessorAvailable=No ExpressionProcessor available.
 data.engine.InconvertibleDatatype=The original dataType of value {0} is {1} which can not be converted to the assigned dataType {2}.
 data.engine.ConvertToDataTypeError={0} can not be converted to {1}.
-# oda consumer error
+
+
+# oda consumer errors
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
 odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
@@ -204,6 +207,7 @@ odaconsumer.UnrecognizedOdaType=Unrecognized ODA data type: {0}.
 odaconsumer.CannotGetColumnNativeDataTypeName=Cannot get the native data type name for the column ({0}).
 odaconsumer.CannotGetParameterMetaData=Cannot get ODA driver parameter metadata.
 odaconsumer.CannotLoadOdaAdapter=Unable to load {0} driver; missing the DTP-to-BIRT ODA adapter plug-in ({1}).
+odaconsumer.MustSpecifyColumnName=Must specify column name when adding a column hint.
 
 odaconsumer.manager.CannotGetNamedResultsAfterExecuteQuery=Cannot get result sets by name after executeQuery() has been called.
 odaconsumer.manager.CannotSetParamBeforePrepare=Cannot set input parameters before statement has been prepared.
@@ -219,4 +223,3 @@ odaconsumer.manager.MaxConcurrentStatementsReached=Maximum active concurrent sta
 odaconsumer.manager.PrepareFailed=Prepare failed.
 odaconsumer.manager.CannotGetResultSetMdBeforePrepare=Cannot get result set metadata before statement has been prepared.
 odaconsumer.manager.CannotExecuteBeforePrepare=Cannot execute the statement before statement has been prepared.
-data.engine.GroupFilteringIsNotAllowedInGiverQuery=Group filtering cannot coexist with computed columns/filters/sorts/groups that are using Aggregations.
