Bugzilla Bug 115940 : Unclear "LIKE" operator pattern syntax

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -54,7 +54,7 @@ data.engine.DupColumnName=Duplicate column name: {0}
 data.engine.DupAlias=Duplicate column name or alias: {0}
 data.engine.InvalidFieldIndex=Invalid field index: {0}
 
-data.engine.MatchError=Error matching object to pattern.
+data.engine.MatchError=Error matching string to pattern: {0}. Check pattern syntax.
 data.engine.BadOperandType=Unexpected operand data type: {0}
 
 data.engine.BadParameterCount=Incorrect number of parameters are supplied.
