--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -95,6 +95,13 @@ data.engine.ReadTempError=Exception in reading temporary file for large data set
 data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
 
+# error related with data engine context
+data.engine.InvalidMode=The mode value {0} of data engine context is invalid. 
+data.engine.RDSaveError=There is an error in saving the data of {0}.
+data.engine.RDLoadError=There is an error in loading the data of {0}.
+data.engine.NullExpr=Expression can not be null to retrieve value.
+data.engine.InValidExpr=Invalid expression to retrieve value.
+ 
 # other error
 data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}):  {2}.
 data.engine.PreparedQueryClosed=PreparedQuery instance is closed.
