add property on ReportDesign and a new structure

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1621,6 +1621,7 @@ Structure.NumberFormatValue=Number Format Value
 Structure.StringFormatValue=String Format Value
 Structure.DateTimeFormatValue=Date Time Format Value
 Structure.UserMethod=User Method
+Structure.DataSourceParamBinding=Data Source parameter binding
 
 #0.MapRule
 Structure.MapRule.testExpr=TestExpression
@@ -1796,6 +1797,10 @@ Structure.DateTimeFormatValue.pattern=Pattern
 #22. UserMethod
 Structure.UserMethod.name=Name
 
+#23. DataSourceParamBinding
+Structure.DataSourceParamBinding.dataSourceName=Data Source name
+Structure.DataSourceParamBinding.paramBindings=Parameter property bindings
+
 ###########################################################
 # Element names
 
@@ -1928,6 +1933,7 @@ Element.ReportDesign.slot.components=Components
 Element.ReportDesign.slot.body=Body
 Element.ReportDesign.slot.scratchPad=Scratch Pad
 Element.ReportDesign.slot.templateParameterDefinitions=Template Parameter Definitions
+Element.ReportDesign.dataSourceBindings=Data Source bindings
 
 #2. Report Element ( Prefix = Element.ReportElement )
 Element.ReportElement.displayName=Display name
