Compatible work for model js supports.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1956,14 +1956,25 @@ Element.JdbcDataSource.dataSource=Data source
 Element.DataSet.dataSource=Data source
 Element.DataSet.beforeOpen=Before open
 Element.DataSet.beforeOpen.toolTip=Called just before BIRT opens the data set
+Element.DataSet.beforeOpen.handle=Data set
+Element.DataSet.beforeOpen.reportContext=Report context
+Element.DataSet.beforeOpen.object=Object
 Element.DataSet.beforeClose=Before close
 Element.DataSet.beforeClose.toolTip=Called just before BIRT closes the data set
+Element.DataSet.beforeClose.reportContext=Report context
+Element.DataSet.beforeClose.object=Object
 Element.DataSet.onFetch=On fetch
 Element.DataSet.onFetch.toolTip=Called just before BIRT fetches data row from the data set
+Element.DataSet.onFetch.reportContext=Report context
+Element.DataSet.onFetch.object=Object
 Element.DataSet.afterOpen=After open
 Element.DataSet.afterOpen.toolTip=Called just after BIRT opens the data set
+Element.DataSet.afterOpen.reportContext=Report context
+Element.DataSet.afterOpen.object=Object
 Element.DataSet.afterClose=After close
 Element.DataSet.afterClose.toolTip=Called just after BIRT closes the data set
+Element.DataSet.afterClose.reportContext=Report context
+Element.DataSet.afterClose.object=Object
 Element.DataSet.parameters=Parameters
 Element.DataSet.paramBindings=Parameter bindings
 Element.DataSet.resultSet=Result set
@@ -2308,28 +2319,49 @@ Element.ExtendedItem.filter=Filter
 #28.DataSource ( prefix Element.DataSource )
 Element.DataSource.beforeOpen=Before open
 Element.DataSource.beforeOpen.toolTip=This method is called just before BIRT opens the data source
+Element.DataSource.beforeOpen.handle=Data source
+Element.DataSource.beforeOpen.reportContext=Report context
+Element.DataSource.beforeOpen.object=Object
 Element.DataSource.beforeClose=Before close
 Element.DataSource.beforeClose.toolTip=This method is called just before BIRT closes the data source
+Element.DataSource.beforeClose.reportContext=Report context
+Element.DataSource.beforeClose.object=Object
 Element.DataSource.afterOpen=After open
 Element.DataSource.afterOpen.toolTip=This method is called just after BIRT opens the data source
+Element.DataSource.afterOpen.reportContext=Report context
+Element.DataSource.afterOpen.object=Object
 Element.DataSource.afterClose=After close
 Element.DataSource.afterClose.toolTip=This method is called just after BIRT closes the data source
+Element.DataSource.afterClose.reportContext=Report context
+Element.DataSource.afterClose.object=Object
 
 #29.ScriptDataSource ( prefix Element.ScriptDataSource )
 Element.ScriptDataSource.open=Open
 Element.ScriptDataSource.open.toolTip=Establishes a connection to the data source.
+Element.ScriptDataSource.open.reportContext=Report context
+Element.ScriptDataSource.open.object=Object
 Element.ScriptDataSource.close=Close
-Element.ScriptDataSource.close.toolTip=Drops the connection to the data source 
+Element.ScriptDataSource.close.toolTip=Drops the connection to the data source
+Element.ScriptDataSource.close.reportContext=Report context 
+Element.ScriptDataSource.close.object=Object
 
 #31 ScriptDataSet ( prefix Element.ScriptDataSet )
 Element.ScriptDataSet.open=Open
 Element.ScriptDataSet.open.toolTip=Opens the data set
+Element.ScriptDataSet.open.reportContext=Report context
+Element.ScriptDataSet.open.object=Object
 Element.ScriptDataSet.describe=Describe
 Element.ScriptDataSet.describe.toolTip=Describes the result set.
+Element.ScriptDataSet.describe.reportContext=Report context 
+Element.ScriptDataSet.describe.object=Object
 Element.ScriptDataSet.fetch=Fetch
-Element.ScriptDataSet.fetch.toolTip=Creates, populates and returns an object of type DataRow 
+Element.ScriptDataSet.fetch.toolTip=Creates, populates and returns an object of type DataRow
+Element.ScriptDataSet.fetch.reportContext=Report context 
+Element.ScriptDataSet.fetch.object=Object 
 Element.ScriptDataSet.close=Close
 Element.ScriptDataSet.close.toolTip=Closes the data set
+Element.ScriptDataSet.close.reportContext=Report context 
+Element.ScriptDataSet.close.object=Object
 
 #32 Listing ( prefix Element.Lising )
 Element.Listing.sorting=Sorting
