DtE starts to use IDocumentArchive to access the data of report document

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -96,7 +96,8 @@ data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
 
 # error related with data engine context
-data.engine.InvalidMode=The mode value {0} of data engine context is invalid. 
+data.engine.InvalidMode=The mode value {0} of data engine context is invalid.
+data.engine.InvalidArchive=In generation or presentation, archive can not be null. 
 data.engine.RDSaveError=There is an error in saving the data of {0}.
 data.engine.RDLoadError=There is an error in loading the data of {0}.
 data.engine.NullExpr=Expression can not be null to retrieve value.
