Support display name, icon file and cheet sheet in report designs.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1916,6 +1916,10 @@ Element.ReportDesign.beforeRender.object=Object
 Element.ReportDesign.afterRender=After render
 Element.ReportDesign.afterRender.reportContext=Report context
 Element.ReportDesign.afterRender.object=Object
+Element.ReportDesign.displayNameID=Display name key
+Element.ReportDesign.displayName=Display name
+Element.ReportDesign.iconFile=Icon file
+Element.ReportDesign.cheetSheet=Cheet sheet
 Element.ReportDesign.beforeFactory.toolTip=Called at the start of the Factory after the initialize( ) method and before opening the report document (if any)
 Element.ReportDesign.afterFactory.toolTip=Called at the end of the Factory after closing the report document (if any). This is the last method called in the Factory
 Element.ReportDesign.beforeOpenDoc.toolTip=Called just before opening the report document in the Factory
