Fix 116184 -- refactor displayName for TextData to "Dynamic Text" and remove some java doc warnings.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1840,7 +1840,7 @@ Element.Tile=Tile
 Element.Rectangle=Rectangle
 Element.GraphicMasterPage=Graphic Master Page
 Element.SimpleMasterPage=Simple Master Page
-Element.TextData=Text data
+Element.TextData=Dynamic Text
 Element.ExtendedItem=Extended item
 Element.ScriptDataSource=Script Data Source
 Element.ScriptDataSet=Script Data Set
