Fix [Bugzilla] 117444 -- add public method to set default value for user properties and refactor the addUserProperty() in UserPropertyCommand.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2825,6 +2825,7 @@ Error.UserPropertyException.CHOICE_VALUE_REQUIRED=The value of the user-defined 
 Error.UserPropertyException.CHOICE_NAME_REQUIRED=The name of the user-defined choice is required in user property "{0}".
 Error.UserPropertyException.INVALID_CHOICE_VALUE=The value of the choice is invalid for the type of the user property "{0}".
 Error.UserPropertyException.INVALID_DEFINITION=The user property definition is invalid.
+Error.UserPropertyException.INVALID_DEFAULT_VALUE=Default value "{2}" of the user property "{1}" in {0} is invalid for the type "{3}".
 
 #MetaDataReaderException
 Error.MetaDataReaderException.META_DATA_ERROR=The meta-data is invalid.
