The element which already contains a template element can not be transformed to a template element

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2855,3 +2855,4 @@ Error.TemplateException.TRANSFORM_TO_DATA_SET_FORBIDDEN=The {0} has no explicit 
 Error.TemplateException.REVERT_TO_TEMPLATE_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be reverted to a template element.
 Error.TemplateException.CREATE_TEMPLATE_ELEMENT_FORBIDDEN=The {0} is not in the report, so it can not do any transformation.
 Error.TemplateException.TEMPLATE_ELEMENT_NOT_SUPPORTED=The template elements are not supported in libraries.
+Error.ContentException.TEMPLATE_TRANSFORM_FORBIDDEN=The element is not allowed to transformed to a template.
