Support "libReference" for embedded images.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1701,6 +1701,7 @@ Structure.IncludeScript.fileName=Filename
 Structure.EmbeddedImage.name=Name
 Structure.EmbeddedImage.type=Type
 Structure.EmbeddedImage.data=Data
+Structure.EmbeddedImage.libReference=Library Reference
 
 #11.FilterCondition
 Structure.FilterCondition.operator=Operator
@@ -2668,6 +2669,7 @@ Error.ContentException.INVALID_CONTEXT_CONTAINMENT=The {0} is not allowed direct
 Error.ContentException.STRUCTURE_CHANGE_FORBIDDEN=Element "{0}" is child element or a virtual element( inside the child ), can not change its structure.
 Error.ContentException.CONTENT_NAME_REQUIRED=The {0} is not allowed to be added into the {1}''s slot {2} because it does not have a name.
 Error.ContentException.INVALID_TEMPLATE_ELEMENT=The {0} has no explicit template parameter definition, so it can not be inserted to the slot ({2}) of {1}.
+Error.ContentException.TEMPLATE_TRANSFORM_FORBIDDEN=The element is not allowed to transformed to a template.
 
 #CustomMsgException
 Error.CustomMsgException.RESOURCE_KEY_REQUIRED=The resource key of translation must be provided.
@@ -2716,7 +2718,7 @@ Error.PropertyValueException.WRONG_ITEM_TYPE=The structure type is "{0}", not "{
 Error.PropertyValueException.NEGATIVE_VALUE=Value "{0}" for property "{1}" is invalid, the value cannot be negative.
 Error.PropertyValueException.NON_POSITIVE_VALUE=Value "{0}" for property "{1}" is invalid, the value should be positive.
 Error.PropertyValueException.EXTENSION_SETTING_FORBIDDEN=The property "{0}" of ExtendedItem "{1}" is forbidden to set by commands.
-
+Error.PropertyValueException.DOT_FORBIDDEN=The name "{0}" is invalid for it contains character ".".
     
 #SemanticError
 Error.SemanticError.INCONSITENT_TABLE_COL_COUNT=The table "{0}" has inconsistent column count.
@@ -2760,7 +2762,7 @@ Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" t
 Error.SemanticError.INVALID_SCALAR_PARAMETER_TYPE=Type scalar parameter "{0}" is not valid. Parameters within a cascading parameter group should be dynamic type.  
 Error.SemanticError.MISSING_TEMPLATE_PARAMETER_TYPE=The element {0} must define an "allowedType" explicitly. 
 Error.SemanticError.INCONSISTENT_TEMPLATE_PARAMETER_TYPE=The default element {1} in element {0} is not a kind of {2}.
-
+Error.SemanticError.INVALID_LIBRARY_REFERENCE=The library reference "{2}" of {0} "{1}" is invalid, for the referred structure does not exsit. 
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
@@ -2855,4 +2857,3 @@ Error.TemplateException.TRANSFORM_TO_DATA_SET_FORBIDDEN=The {0} has no explicit 
 Error.TemplateException.REVERT_TO_TEMPLATE_FORBIDDEN=The {0} has no explicit template parameter definition, so it can not be reverted to a template element.
 Error.TemplateException.CREATE_TEMPLATE_ELEMENT_FORBIDDEN=The {0} is not in the report, so it can not do any transformation.
 Error.TemplateException.TEMPLATE_ELEMENT_NOT_SUPPORTED=The template elements are not supported in libraries.
-Error.ContentException.TEMPLATE_TRANSFORM_FORBIDDEN=The element is not allowed to transformed to a template.
