Added ¡®MATCH¡¯ operator in ROM. Save event handler to design.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -371,6 +371,7 @@ Choices.filterOperator.lt=Less than
 Choices.filterOperator.le=Less than or Equal
 Choices.filterOperator.ge=Larger than or Equal
 Choices.filterOperator.gt=Larger than
+Choices.filterOperator.match=Match
 Choices.filterOperator.between=Between
 Choices.filterOperator.notBetween=Not Between
 Choices.filterOperator.isNull=Is Null
