--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -371,7 +371,6 @@ Choices.filterOperator.lt=Less than
 Choices.filterOperator.le=Less than or Equal
 Choices.filterOperator.ge=Larger than or Equal
 Choices.filterOperator.gt=Larger than
-Choices.filterOperator.match=Match
 Choices.filterOperator.between=Between
 Choices.filterOperator.notBetween=Not Between
 Choices.filterOperator.isNull=Is Null
@@ -1613,7 +1612,7 @@ Structure.ParamBinding=Parameter Binding
 Structure.ResultSetColumn=Column
 Structure.ComputedColumn=Computed Column
 Structure.ColumnHint=Column Hint
-Structure.IncludeLibrary=Include Library
+Structure.IncludedLibrary=Included Library
 Structure.DataSetParam=DataSet Parameter
 Structure.PropertyMask=Property Mask
 Structure.ExtendedProperty=Extended Property
@@ -1751,9 +1750,9 @@ Structure.SelectionChoice.value=Value
 Structure.SelectionChoice.label=Label
 Structure.SelectionChoice.labelID=Label Resource Key
 
-#13. IncludeLibrary
-Structure.IncludeLibrary.fileName=Filename
-Structure.IncludeLibrary.namespace=Namespace
+#13. IncludedLibrary
+Structure.IncludedLibrary.fileName=Filename
+Structure.IncludedLibrary.namespace=Namespace
 
 #15. DataSetParam
 Structure.DataSetParam.name=Name
@@ -1874,7 +1873,7 @@ Element.Module.initialize.object=Object
 Element.Module.colorPalette=Color palette
 Element.Module.configVars=Config variables
 Element.Module.images=Images
-Element.Module.includeLibraries=Include libraries
+Element.Module.libraries=libraries
 Element.Module.includeScripts=Include scripts
 Element.Module.includeResource=Include resource
 Element.Module.base=Base
