--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -96,12 +96,14 @@ data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
 
 # error related with data engine context
-data.engine.InvalidMode=The mode value {0} of data engine context is invalid.
-data.engine.InvalidArchive=In generation or presentation, archive can not be null. 
-data.engine.RDSaveError=There is an error in saving the data of {0}.
-data.engine.RDLoadError=There is an error in loading the data of {0}.
-data.engine.NullExpr=Expression can not be null to retrieve value.
-data.engine.InValidExpr=Invalid expression to retrieve value.
+data.engine.InvalidMode=The mode value {0} for data engine context is invalid.
+data.engine.InvalidArchive=In generation or presentation, report archive can not be null. 
+data.engine.SaveReportDocumentError=There is an report document error in saving the data of {0}.
+data.engine.LoadReportDocumentError=There is an report document error in loading the data of {0}.
+data.engine.GetSaveStreamError=There is an report document error in getting the save stream.
+data.engine.GetLoadStreamError=There is an report document error in getting the load stream.
+data.engine.NullExpr=Expression can not be null to retrieve value in presentation.
+data.engine.InValidExpr=Invalid expression to retrieve value in presentation.
  
 # other error
 data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}):  {2}.
