Add new property "cachedRowCount" on odaDataSet

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2407,6 +2407,7 @@ Element.OdaDataSet.resultSetName=Result set name
 Element.OdaDataSet.publicDriverProperties=Public driver properties
 Element.OdaDataSet.privateDriverProperties=Private driver properties
 Element.OdaDataSet.privateDriverDesignState=Private driver design state
+Element.OdaDataSet.cachedRowCount=Cached row count
 
 #37 DesignElement ( Prefix Element.DesignElement )
 Element.DesignElement.customXml=Custom XML
