Support for Java scripting

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -26,7 +26,7 @@ data.engine.DataSourceMissingExtId=Missing extension id in definition of data so
 data.engine.NullGroupStart=The group start value cannot be null
 data.engine.UnsupportedDirectNestedAggregate=Direct nested aggregate is unsupported
 
-data.engine.ResultClosed=Result iterator has been closed.
+data.engine.ResultClosed=QueryResults or its iterator has been closed.
 data.engine.NoCurrentRow=Result iterator has no current row. It either has not started or has ended.
 data.engine.InvalidJSExpr=Invalid Javascript expression: {0}
 data.engine.InvalidTotalFuncName=Invalid Total function name: {0}
@@ -91,9 +91,10 @@ data.engine.BadDestIndex=The value {0} of destIndex is not valid, which should b
 data.engine.WriteTempError=Exception in writing temporary file for large data set
 data.engine.ReadTempError=Exception in reading temporary file for large data set
 
-# Wrapper Error
+# Wrapped Error
 data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
+data.engine.BirtException=A BIRT exception occurred: {0}. See next exception for more information.
 
 # error related with data engine context
 data.engine.InvalidMode=The mode value {0} for data engine context is invalid.
@@ -121,7 +122,7 @@ data.engine.incorrectGroupKeyValues=The given group key values array is incorrec
 data.engine.NoExpressionProcessorAvailable=No ExpressionProcessor available.
 data.engine.InconvertibleDatatype=The original dataType of value {0} is {1} which can not be converted to the assigned dataType {2}.
 data.engine.ConvertToDataTypeError={0} can not be converted to {1}.
-
+data.engine.NoRowUpdate=Data row cannot be updated at this time.
 
 # oda consumer errors
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
